vlib/v/checker/tests/sum_type_infix_err.vv
type Abc = int | string

fn main() {
	x := Abc(0)
	_ := x + Abc(5)
	_ := 123 + x
	_ = unsafe{&x + 5}
}
